[package]
name = "coco"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
const_format = "0.2.34"
dotenv-parser = "0.1.3"
toml = { version = "0.8.19", default-features = false, features = ["display"] }

[build-dependencies]
vergen-gitcl = "1.0.0"
